[tool.poetry]
name = "locomotive"
# https://github.com/python-poetry/poetry/issues/140
# => Support automatic versioning setuptools_scm-style?
version = "v0.9.2"
description = "Python API clients and a CLI for France's railways."
authors = ["Yann Feunteun, Maxime Mouchet"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/maxmouchet/locomotive"
documentation = "https://maxmouchet.github.io/locomotive/"
# License and Python classifiers are added automatically
# https://python-poetry.org/docs/pyproject/#classifiers
classifiers=[
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
keywords = ["api", "cli", "sncf", "train", "france", "tgv", "ter"]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.3"
colored = "^1.4.2"
click = "^7.0"
dateparser = "^0.7"
faker = "^3.0.0"
geopy = "^1.20"
jinja2 = "^2.11.1"
pendulum = "^2.0.5"
py-money = "^0.4.0"
requests = "^2.20"
tableformatter = "^0.1.4"
text-unidecode = "^1.3"
tqdm = "^4.42.1"

[tool.poetry.dev-dependencies]
# https://github.com/python-poetry/poetry/issues/649
# => This is required because there are no release versions of black at all.
black = {version = "^19.10b0", allow-prereleases = true}
coverage = {extras = ["toml"], version = "^5.0.1"}
coveralls = "^1.10.0"
mypy = "^0.761.0"
pylint = "^2.5"
pytest = "^5.3"
pytest-cov = "^2.8"
pre-commit = "^1.20.0"
sphinx = "^2.3.1"
sphinx-click = "^2.3.1"

[tool.poetry.scripts]
locomotive = 'locomotive.cli:cli'

[tool.pylint.messages_control]
disable = "bad-continuation,invalid-name,missing-module-docstring,missing-class-docstring,missing-function-docstring,no-self-use,too-few-public-methods"

[tool.coverage.run]
omit = [
    "locomotive/data/*",
    "locomotive/cli/templates/*"
]

[tool.isort]
# https://github.com/timothycrosley/isort/issues/694
# => Interopability with black
# => https://github.com/psf/black#how-black-wraps-lines
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
